--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <header>
         <div class="mi-menu-especial">
             <div class="header-content">
-                <img src="img/logo.png" alt="Logo de Gran Hotel Muso">
+                <img src="IMG/logo.png" alt="Logo de Gran Hotel Muso">
                 <div class="form-container">
                     <form id="reserve-form"> 
                         <div class="form-row">
@@ -156,7 +156,7 @@
                     <!-- Card Introducción -->
                     <div class="col-md-4 mb-4">
                         <div class="card card-hover">
-                            <img src="img/index/img1.jpg" class="card-img-top" alt="Gran Hotel Muso">
+                            <img src="IMG/index/img1.jpg" class="card-img-top" alt="Gran Hotel Muso">
                             <div class="card-body">
                                 <h5 class="card-title">HOTEL</h5>
                                 <p class="card-text">Con una ubicación excepcional en el corazón de Los Angeles, frente a la plaza de armas, nuestro hotel ubicado en el centro, encontrando servicios importantes como el Municipio, la Gobernación, el SII y el Registro Civil. </p>
@@ -166,7 +166,7 @@
                     <!-- Card Servicios -->
                     <div class="col-md-4 mb-4">
                         <div class="card card-hover">
-                            <img src="img/index/banquetting.jpg" class="card-img-top" alt="Gran Hotel Muso">
+                            <img src="IMG/index/banquetting.jpg" class="card-img-top" alt="Gran Hotel Muso">
                             <div class="card-body">
                                 <h5 class="card-title">SERVICIOS</h5>
                                 <ul class="card-text">
@@ -183,7 +183,7 @@
                     <!-- Card Misión -->
                     <div class="col-md-4 mb-4">
                         <div class="card card-hover">
-                            <img src="img/index/Fondo_Header.jpg" class="card-img-top" alt="Nuestra Misión">
+                            <img src="IMG/index/Fondo_Header.jpg" class="card-img-top" alt="Nuestra Misión">
                             <div class="card-body">
                                 <h5 class="card-title">MISIÓN</h5>
                                 <p class="card-text">Nuestra misión es atender cordialmente a quienes nos visiten, esforzandonos por entregar un servicio de calidad, eficiencia y prontitud, asegurando que cada estancia sea una experiencia memorable y placentera.</p>
@@ -201,17 +201,17 @@
             <h1>GALERIA</h1>
             <div class="contenedor" id="contenedor-galeria">
                 <div class="contenedor-galeria" >
-                    <img src="img/index/1.jpg" alt="Imagen1">
-                    <img src="img/index/2.jpg" alt="Imagen2">
-                    <img src="img/index/3.jpg" alt="Imagen3">
-                    <img src="img/index/17.jpg" alt="Imagen4">
-                    <img src="img/index/7.jpg" alt="Imagen5">
-                    <img src="img/index/8.jpg" alt="Imagen6">
-                    <img src="img/index/12.jpg" alt="Imagen7">
-                    <img src="img/index/Sala Bio Bio.jpg" alt="Imagen8">
-                    <img src="img/index/Sala Valdivia.jpg" alt="Imagen9">
-                    <img src="img/index/Habitacion Cuadruple.jpg" alt="Imagen9">
-                    <img src="img/index/Habitacion Doble Estandar.jpg" alt="Imagen9">
+                    <img src="IMG/INDEX/1.jpg" alt="Imagen1">
+                    <img src="IMG/INDEX/2.jpg" alt="Imagen2">
+                    <img src="IMG/INDEX/3.jpg" alt="Imagen3">
+                    <img src="IMG/INDEX/17.jpg" alt="Imagen4">
+                    <img src="IMG/INDEX/7.jpg" alt="Imagen5">
+                    <img src="IMG/INDEX/8.jpg" alt="Imagen6">
+                    <img src="IMG/INDEX/12.jpg" alt="Imagen7">
+                    <img src="IMG/INDEX/Sala Bio Bio.jpg" alt="Imagen8">
+                    <img src="IMG/INDEX/Sala Valdivia.jpg" alt="Imagen9">
+                    <img src="IMG/INDEX/Habitacion Cuadruple.jpg" alt="Imagen9">
+                    <img src="IMG/INDEX/Habitacion Doble Estandar.jpg" alt="Imagen9">
                 </div>
                 <button id="prevBtn" class="nav-btn prev-btn">&lt;</button>
                 <button id="nextBtn" class="nav-btn next-btn">&gt;</button>
@@ -237,10 +237,10 @@
             <p>Teléfono: +56 43 2546100, +56 43 2313183</p>
             <p>Email: contacto@hotelmuso.cl</p>
             <div>
-                <a href="#"><img src="img/Facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/Linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="IMG/Facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="IMG/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="IMG/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="IMG/Linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
     </footer>
