--- a/habitaciones.html
+++ b/habitaciones.html
@@ -104,7 +104,7 @@
     <header>
         <div class="mi-menu-especial">
             <div class="header-content">
-                <img src="img/logo.png" alt="Logo de Gran Hotel Muso">
+                <img src="IMG/logo.png" alt="Logo de Gran Hotel Muso">
                 <div class="form-container">
                     <form id="reserve-form"> 
                         <div class="form-row">
@@ -168,7 +168,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp " data-wow-delay="0.1s">
                     <div class="room-item shadow rounded overflow-hidden bg-white">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Habitaciones/suite.png" alt="">
+                            <img class="img-fluid" src="IMG/Habitaciones/suite.png" alt="">
                             <small class="position-absolute start-0 top-100 translate-middle-y bg-red text-white rounded py-1 px-3 ms-4">$66.000/Noche</small>
                         </div>
                         <div class="p-4 mt-2">
@@ -209,7 +209,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="room-item shadow rounded overflow-hidden bg-white">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Habitaciones/doble.png" alt="">
+                            <img class="img-fluid" src="IMG/Habitaciones/doble.png" alt="">
                             <small class="position-absolute start-0 top-100 translate-middle-y bg-red text-white rounded py-1 px-3 ms-4">$87.000/Noche</small>
                         </div>
                         <div class="p-4 mt-2">
@@ -250,7 +250,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="room-item shadow rounded overflow-hidden bg-white">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Habitaciones/single-king.png" alt="">
+                            <img class="img-fluid" src="IMG/Habitaciones/single-king.png" alt="">
                             <small class="position-absolute start-0 top-100 translate-middle-y bg-red text-white rounded py-1 px-3 ms-4">$118.000/Noche</small>
                         </div>
                         <div class="p-4 mt-2">
@@ -291,7 +291,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="room-item shadow rounded overflow-hidden bg-white">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Habitaciones/single.png" alt="">
+                            <img class="img-fluid" src="IMG/Habitaciones/single.png" alt="">
                             <small class="position-absolute start-0 top-100 translate-middle-y bg-red text-white rounded py-1 px-3 ms-4">$118.000/Noche</small>
                         </div>
                         <div class="p-4 mt-2">
@@ -334,7 +334,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="room-item shadow rounded overflow-hidden bg-white">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Habitaciones/matrimonial.png" alt="">
+                            <img class="img-fluid" src="IMG/Habitaciones/matrimonial.png" alt="">
                             <small class="position-absolute start-0 top-100 translate-middle-y bg-red text-white rounded py-1 px-3 ms-4">$87.000/Noche</small>
                         </div>
                         <div class="p-4 mt-2">
@@ -375,7 +375,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="room-item shadow rounded overflow-hidden bg-white">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/Habitaciones/matrimonial-acom.png" alt="">
+                            <img class="img-fluid" src="IMG/Habitaciones/matrimonial-acom.png" alt="">
                             <small class="position-absolute start-0 top-100 translate-middle-y bg-red text-white rounded py-1 px-3 ms-4">$131.000/Noche</small>
                         </div>
                         <div class="p-4 mt-2">
@@ -486,10 +486,10 @@
             <p>Teléfono: +56 43 2546100, +56 43 2313183</p>
             <p>Email: contacto@hotelmuso.cl</p>
             <div>
-                <a href="#"><img src="img/Facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/Linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="IMG/Facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="IMG/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="IMG/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="IMG/Linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
     </footer>
