--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <!-- Card Introducción -->
                     <div class="col-md-4 mb-4">
                         <div class="card card-hover">
-                            <img src="IMG/index/img1.jpg" class="card-img-top" alt="Gran Hotel Muso">
+                            <img src="IMG/INDEX/img1.jpg" class="card-img-top" alt="Gran Hotel Muso">
                             <div class="card-body">
                                 <h5 class="card-title">HOTEL</h5>
                                 <p class="card-text">Con una ubicación excepcional en el corazón de Los Angeles, frente a la plaza de armas, nuestro hotel ubicado en el centro, encontrando servicios importantes como el Municipio, la Gobernación, el SII y el Registro Civil. </p>
@@ -166,7 +166,7 @@
                     <!-- Card Servicios -->
                     <div class="col-md-4 mb-4">
                         <div class="card card-hover">
-                            <img src="IMG/index/banquetting.jpg" class="card-img-top" alt="Gran Hotel Muso">
+                            <img src="IMG/INDEX/banquetting.jpg" class="card-img-top" alt="Gran Hotel Muso">
                             <div class="card-body">
                                 <h5 class="card-title">SERVICIOS</h5>
                                 <ul class="card-text">
@@ -183,7 +183,7 @@
                     <!-- Card Misión -->
                     <div class="col-md-4 mb-4">
                         <div class="card card-hover">
-                            <img src="IMG/index/Fondo_Header.jpg" class="card-img-top" alt="Nuestra Misión">
+                            <img src="IMG/INDEX/Fondo_Header.jpg" class="card-img-top" alt="Nuestra Misión">
                             <div class="card-body">
                                 <h5 class="card-title">MISIÓN</h5>
                                 <p class="card-text">Nuestra misión es atender cordialmente a quienes nos visiten, esforzandonos por entregar un servicio de calidad, eficiencia y prontitud, asegurando que cada estancia sea una experiencia memorable y placentera.</p>
